--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1652,3 +1652,16 @@ ul.lead li {
   box-shadow: 0 1px 5px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .4);
   transition: all 300ms linear
 }
+
+#screen-but{
+  margin-left: 700px;
+  margin-bottom: 5px;
+}
+#editor-but{
+  color: wheat;
+  margin-top: 4px;
+  margin-left: 1200px;
+}
+#editor-but:hover{
+  color: #5bc0de;
+}
