--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,19 +3,19 @@ body {
 }
 
 body,html{
-  height: 100%;
+  height: 90%;
 }
 
 td {
-  background-color: white;
-  border-radius: 25%;
+  background-color: black;
+  border-radius: 40%;
   opacity: .2;
-  width: 50px;
-  height: 50px;
+  width: 59px;
+  height: 59px;
   text-align: center;
   font-family: 'Roboto', sans-serif;
   color: white;
-  font-size: 50px;
+  font-size: 59px;
   text-align: center;
   font-weight: 600;
 }
